add nouvelles questions

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -241,6 +241,9 @@ nlu:
   examples: |
     - Agrément et autorisation d’exercer
     - Comment obtenir un agrément?
+    - ou deposer une demande d'agrémént
+    - depot d'agrément
+    - ou deposer une demande d agrement 
     - autorisation exercer
     - comment avoir une autorisation d'exercer au port?
     - Agrément
