Ajou demande d'emploi et satge buttons

--- a/domain.yml
+++ b/domain.yml
@@ -240,6 +240,8 @@ responses:
         payload: "/enlevement_marchandise"
       - title: "Sécurité/ Sûreté/ Environnement"
         payload: "/securite_surete_environnement"
+      - title: "Demande d'emploi ou de stage"
+        payload: "/demande_emploi"
       # - title: "👍"
       #   payload: "/UserMerci"
       # - title: "👎"
@@ -282,6 +284,8 @@ responses:
         payload: "/enlevement_marchandise"
       - title: "Sécurité/ Sûreté/ Environnement"
         payload: "/securite_surete_environnement"
+      - title: "Demande d'emploi ou de stage"
+        payload: "/demande_emploi"
       # - title: "👍"
       #   payload: "/UserMerci"
       # - title: "👎"
