--- a/domain.yml
+++ b/domain.yml
@@ -192,7 +192,7 @@ responses:
   #   - title: "Accès des personnes et véhicules"
         # payload: "/acces_port"
   utter_mauvaise_reponse:
-  - text: "Ha, je suis vraiment désolé."
+  - text: "Ha, je suis vraiment désolé. Je suis encore en apprentissage."
   utter_mauvaise_reponse_1:
   - text: " Veuillez reformuler votre question s'il vous plait !"
   utter_mauvaise_reponse_2:
